# cpp_process_file

./: LICENSE  README.md
CppProcessFile/: .clang-format  CMakeLists.txt
CppProcessFile/assets/: texte.count.txt  texte.txt
CppProcessFile/include/: BoostUtilities.h  CustomExceptions.h  FileProcessor.h  StringUtilities.h  main.h
CppProcessFile/src/: BoostUtilities.cpp  FileProcessor.cpp  main.cpp
